Manually remove the duplicates with "meld"
Need to find a better solution to remove duplicated in 00-create-inis.
Next items still need to be added : 
Block Game & Echo Key GA888 [azya52, David Haywood] classich
E-Star Brick Game 96 in 1 (E-23 Plus Mark II) [azya52, David Haywood classich

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -91,6 +91,7 @@ horseran
 kingman
 lafootb
 lostreas
+nstarfox
 machiman
 maniac
 mbaseb
@@ -113,6 +114,7 @@ msoccer2
 msthawk
 mwcbaseb
 mwcfootb
+nstarfox
 nummunch
 packmon
 pairmtch
@@ -139,21 +141,17 @@ talkingbb
 talkingfb
 tbaskb
 tbreakup
-tbtoads
 tc4
 tc7atc
 tcaveman
 tccombat
 tigarden
-tinday
 tmbaskb
-tmchammer
 tmpacman
 tmscramb
 tmtennis
 tmtron
 tmvolleyb
-tnmarebc
 trsgkeep
 trshutvoy
 trspacmis
