Add new driver manually to classich.ini
Driver ga888 (Block Game & Echo Key GA888)
Driver brke23p2 (Brick Game 96 in 1 (E-23 Plus Mark II))

--- a/00-databases-00/sorted_info_creation/0XXX/classich.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/classich.ini
@@ -19,6 +19,7 @@ bmsafari
 bmsoccer
 bpengo
 brainbaf
+brke23p2
 bultrman
 bzaxxon
 cdkong
@@ -64,6 +65,7 @@ funjacks
 funrlgl
 funtag
 fxmcr165
+ga888
 galaxy2
 galaxy2b
 gckong
