--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -2,6 +2,7 @@
 ablmini
 ablpinb
 bittboy
+brke23p2
 cybar120
 dgun2573
 dgun2959
@@ -9,6 +10,7 @@ dnv200fs
 fapocket
 fcpocket
 fordrace
+ga888
 gamezn2
 gprnrs1
 gprnrs16
