update automatic/manual created ini files (mame0263)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -2043,6 +2043,7 @@ phoenix3
 phoenixa
 phoenixass
 phoenixb
+phoenixbl
 phoenixc
 phoenixc2
 phoenixc3
@@ -3097,6 +3098,7 @@ vpool
 vroulet
 vscaptfl
 vsgongf
+vueloesp
 vulgus
 vulgusa
 vulgusj
