--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -2930,6 +2930,7 @@ deluxe4u
 deluxe5
 deluxe5a
 deluxe5b
+deluxecoco
 demndrgn
 demoderb
 demoderbc
@@ -4640,6 +4641,7 @@ girotutt
 gjackpot
 gjspace
 gjungler
+gk2000
 gladiatr
 glasgow
 glass
@@ -4881,6 +4883,7 @@ grdforce
 grdian
 grdians
 grdiansa
+grdiansbl
 grdnstrm
 grdnstrmau
 grdnstrmg
@@ -5170,6 +5173,7 @@ h2hsoccerc
 h8
 h88
 h89
+h89_sigmasoft
 hachamf
 hachamfa
 hachamfb
@@ -5177,6 +5181,7 @@ hachamfp
 hacher
 hachoo
 hachooa
+hachooj
 haekaka
 hal21
 hal21j
@@ -5438,6 +5443,7 @@ hogalley
 holeland
 holeland2
 holo
+homelab2
 homerun
 homez80
 homo
@@ -5522,6 +5528,7 @@ hparadis
 hpolym84
 hprot1
 hpuncher
+hr84
 hrdtimes
 hrdtimesa
 hs_l3
@@ -6295,6 +6302,9 @@ junofrstg
 jupace
 jurassic99
 jvchc7gb
+jwildb52
+jwildb52a
+jwildb52h
 jyangoku
 jzth
 k28
@@ -6977,7 +6987,9 @@ loht
 lohtb2
 lohtb3
 lohtj
+lola8
 lola8a
+lola8nk
 lomakai
 lond16
 lond32
@@ -6989,6 +7001,7 @@ looping
 loopingv
 loopingva
 lordgun
+lordgunu
 lordofk
 lordofkb
 lordofkbp
@@ -7558,6 +7571,7 @@ mekd5
 melodym
 memlane
 memoquiz
+mentor16
 meosism
 mephisto
 mephisto1x
@@ -8243,6 +8257,7 @@ mtlchampu
 mtlchampu1
 mtouchxl
 mtrain
+mtraina
 mtrap
 mtrap2
 mtrap3
@@ -8256,6 +8271,7 @@ mtwins
 mtwinsb
 mtx500
 mtx512
+mu10
 mu50
 mugsmash
 multchmp
@@ -8646,6 +8662,7 @@ nova2001u
 novoplay
 novoplaya
 novoplayb
+nprimo
 nprinces
 nprincesb
 nprinceso
@@ -8770,6 +8787,7 @@ onna34ro
 onna34roa
 onyx
 ooparts
+op5cards
 opaopa
 opaopan
 openice
@@ -9841,6 +9859,7 @@ phoenix3
 phoenixa
 phoenixass
 phoenixb
+phoenixbl
 phoenixc
 phoenixc2
 phoenixc3
@@ -10307,6 +10326,7 @@ primob64
 primrage
 primrage20
 primrageo
+prisma
 prmrsocr
 prmrsocrj
 prmtmfgt
@@ -10346,6 +10366,7 @@ psion3a
 psion3a2
 psion3a2_de
 psion3a2_ru
+psion3a2_us
 psion3c
 psion3mx
 psion3mx_fr
@@ -10412,6 +10433,7 @@ ptblank2ua
 ptblank3
 ptblanka
 ptrain
+ptraina
 ptrmj
 pturn
 pubball
@@ -11466,6 +11488,7 @@ sandscrp
 sandscrpa
 sandscrpb
 sanjeon
+santaka2
 sapi1
 sapizps2
 sarge
@@ -11607,6 +11630,7 @@ scorpionmc
 scorpiontb
 scotrsht
 scp300f
+scprof
 scptchess
 scptchessa
 scrabble
@@ -12143,6 +12167,7 @@ sidebs2
 sidebs2j
 sidebs2ja
 sidebs2u
+sidebsj
 sidebsja
 sidebsjb
 sidepckt
@@ -12725,6 +12750,7 @@ sprint8a
 sprinter
 sprpuzzle
 sprtauth
+sprtauth1
 sprtmtch
 spstn_l5
 spuzbobl
@@ -13398,6 +13424,7 @@ tcobra2
 tcobra2u
 tdawg_l1
 tddragon
+tddragon2
 tddragon3
 tdennis
 tdfever
@@ -13806,6 +13833,7 @@ tmht2p
 tmht2pa
 tmhta
 tmhtb
+tmigmax
 tmkombat
 tmmjprd
 tmnt
@@ -14189,6 +14217,7 @@ turbofrc
 turbofrco
 turbofrcu
 turbofrcua
+turbos24k
 turbosub
 turbosubb8
 turbosubc5
@@ -14719,6 +14748,7 @@ vt240
 vt25in1
 vt52
 vtsndtest
+vueloesp
 vulcan
 vulcana
 vulcanb
@@ -14872,6 +14902,7 @@ whp
 wiggie
 wildbill
 wildfang
+wildfangh
 wildfangs
 wildfire
 wildone
@@ -15069,6 +15100,7 @@ wwfwfestu1
 wwfwfestub
 wwjgtin
 wwmarine
+wy100
 wyvernf0
 wyvernf0a
 wyvernwg
@@ -15263,6 +15295,7 @@ zodiac
 zodiack
 zokumahj
 zokuoten
+zokuotena
 zombraid
 zombraidp
 zombraidpj
