--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -164,7 +164,6 @@
 8ballact2
 8bpm
 98best44
-99bottles
 99lstwar
 99lstwara
 99lstwarb
@@ -1907,6 +1906,7 @@ bingor9
 bingowav
 bingowng
 bingownga
+bingplnt
 bingpty
 bioatack
 biomtoy
@@ -4539,6 +4539,7 @@ dragoonj
 dragrace
 dragsphr
 drail
+draillov
 drakor
 drakton
 draw88pkr
@@ -7288,7 +7289,6 @@ gamesnsm
 gametngk
 gametree
 gamezn2
-gammagic
 gammonm2
 gampo812
 gampo816
@@ -7662,6 +7662,7 @@ gjrstar
 gjrstar2
 gjrstar3
 gjungler
+gk2000
 gkidabc
 gkigt4
 gkigt43
@@ -8040,6 +8041,7 @@ grdforce
 grdian
 grdians
 grdiansa
+grdiansbl
 grdnstrm
 grdnstrmau
 grdnstrmg
@@ -8352,6 +8354,7 @@ hachamfp
 hacher
 hachoo
 hachooa
+hachooj
 haekaka
 hal21
 hal21j
@@ -11755,6 +11758,7 @@ looping
 loopingv
 loopingva
 lordgun
+lordgunu
 lordleo
 lordofk
 lordofkb
@@ -19400,10 +19404,12 @@ m_mtchit
 m_mtchup
 m_tppokr
 ma6710
+ma6710a
 ma7551p
 ma7551t
 ma7556
 ma7558
+ma8350
 mac2bios
 mac_1808
 mac_zois
@@ -19908,6 +19914,7 @@ melodym
 memlane
 memoquiz
 menghong
+mentor16
 meosism
 mephisto
 mephisto1x
@@ -20682,6 +20689,7 @@ mswordr1
 mswordu
 mt32
 mt420
+mt440
 mt5510
 mt735
 mt_aftrb
@@ -20744,6 +20752,7 @@ mtlchampj
 mtlchampu
 mtlchampu1
 mtrain
+mtraina
 mtrainnv
 mtrap
 mtrap2
@@ -21252,6 +21261,7 @@ npfpit
 npmillen
 npotogib
 nppopeye
+nprimo
 nprinces
 nprincesb
 nprinceso
@@ -21405,6 +21415,8 @@ olihockey
 olihockeya
 olmandingc
 olmandingo
+olym65bj
+olym65wc
 olymp
 olympic
 olympus
@@ -21432,6 +21444,7 @@ onetwoe
 onna34ro
 onna34roa
 ooparts
+op5cards
 opaopa
 opaopan
 opengolf
@@ -21445,6 +21458,7 @@ opthund
 optiger
 optigera
 optigerj
+optigersm
 opwolf
 opwolf3
 opwolf3j
@@ -21573,6 +21587,7 @@ pachiten
 packbang
 packbangp
 packmon
+packysts
 pacland
 paclandj
 paclandjo
@@ -22631,6 +22646,7 @@ phoenix3
 phoenixa
 phoenixass
 phoenixb
+phoenixbl
 phoenixc
 phoenixc2
 phoenixc3
@@ -22939,6 +22955,10 @@ pnickj
 pnkpnthr
 pntnpuzl
 pocketrc
+poembase
+poemgolf
+poemzet
+poemzet2
 poitto
 poittoc
 poizone
@@ -23328,6 +23348,7 @@ primrage
 primrage20
 primrageo
 princess
+prisma
 prmrsocr
 prmrsocrj
 prmtmfgt
@@ -23432,6 +23453,7 @@ ptblank2ua
 ptblanka
 ptc100
 ptrain
+ptraina
 ptrmj
 pturn
 pubball
@@ -23587,6 +23609,8 @@ qkspeller
 qlgs
 qmegamis
 qmhayaku
+qmrave
+qmsirius
 qncrash
 qndream
 qnile
@@ -23720,6 +23744,7 @@ r_mrevil
 r_pokrplus
 r_quijote
 r_screech
+r_spcgame7
 r_swash
 r_torneo
 ra145
@@ -24172,6 +24197,7 @@ relief3
 renaiclb
 renaissa
 renaissaa
+rendfgtr
 renegade
 renegadeb
 renju
@@ -30397,6 +30423,7 @@ scorpionb
 scorpionmc
 scotrsht
 scp300f
+scprof
 scptchess
 scptchessa
 scptour
@@ -30448,6 +30475,7 @@ scrzy_l1
 scud
 scudau
 scuddx
+scuddxo
 scudhamm
 scudhamma
 scudplus
@@ -31005,6 +31033,7 @@ sidebs2
 sidebs2j
 sidebs2ja
 sidebs2u
+sidebsj
 sidebsja
 sidebsjb
 sidepckt
@@ -32259,6 +32288,7 @@ sprk_096
 sprk_103
 sprpuzzle
 sprtauth
+sprtauth1
 sprtdart
 sprtmtch
 sprtshot
@@ -33190,6 +33220,7 @@ td831
 tdawg_l1
 tdbingo
 tddragon
+tddragon2
 tddragon3
 tdennis
 tdfever
@@ -33745,6 +33776,7 @@ tmht2p
 tmht2pa
 tmhta
 tmhtb
+tmigmax
 tmkombat
 tmmjprd
 tmnt
@@ -34228,6 +34260,7 @@ turbofrc
 turbofrco
 turbofrcu
 turbofrcua
+turbos24k
 turbosub
 turbosubb8
 turbosubc5
@@ -35139,7 +35172,6 @@ vitaminc
 vivdolls
 vjpp2
 vk100
-vl1
 vlcno_1a
 vlcno_1b
 vlcno_1c
@@ -35281,6 +35313,7 @@ vtpinball
 vtsndtest
 vtvppong
 vtvsocr
+vueloesp
 vulcan
 vulcana
 vulcanb
@@ -35483,6 +35516,7 @@ wikwin
 wikwin2
 wildbill
 wildfang
+wildfangh
 wildfangs
 wildfire
 wildfyre
