--- a/00-databases-00/sorted_info_creation/0XXX/tigerh.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/tigerh.ini
@@ -7,6 +7,7 @@ tbatmana
 tbtoads
 tbttf
 tddragon
+tddragon2
 tddragon3
 tdennis
 tdummies
@@ -27,6 +28,7 @@ tkarnov
 tkazaam
 tmchammer
 tmegaman3
+tmigmax
 tmkombat
 tnmarebc
 topaliens
