update auto/man created ini files (mame0265)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -8,6 +8,7 @@
 1942abl
 1942b
 1942h
+1942iti
 1942p
 1942w
 1943
@@ -262,6 +263,7 @@ bagman
 bagmanf
 bagmanj
 bagmanm2
+bagmanm3
 bagmanmc
 bagmans
 bagmans3
@@ -347,6 +349,7 @@ birdtrya
 birdtryb
 bitgrpha
 bitgrphb
+bj92
 bjtwin
 bjtwina
 bjtwinp
@@ -395,6 +398,7 @@ bombjackbl
 bombjackt
 bombsa
 bongo
+bongoa
 boobhack
 boomrang
 boomranga
@@ -1101,6 +1105,7 @@ galaxia
 galaxiaa
 galaxiab
 galaxiac
+galaxiamv
 galaxian
 galaxiana
 galaxianbl
@@ -1206,6 +1211,7 @@ gomoku
 gondo
 gondou
 gorf
+gorfirec
 gorfpgm1
 gorfpgm1f
 gorfpgm1g
@@ -1821,11 +1827,13 @@ mspacmanbg
 mspacmanbg2
 mspacmanbgc
 mspacmanbgd
+mspacmanbgf
 mspacmanbhe
 mspacmanbi
 mspacmanblt
 mspacmanblt2
 mspacmancr
+mspacmanhnc
 mspacmanlai
 mspacmat
 mspacmbe
@@ -1834,6 +1842,7 @@ mspacmbn
 mspacmnf
 mspacpls
 mspactwin
+mspactwina
 mspuzzle
 mspuzzlea
 mspuzzleb
@@ -1905,6 +1914,7 @@ numcrash
 nunchaku
 nyny
 nynyg
+odyssey
 offensiv
 ohpaipee
 oigas
@@ -2287,6 +2297,7 @@ rdftu
 rdftua
 re800ea
 re800v1
+re800v1a
 re800v3
 re900
 reaktor
@@ -2501,6 +2512,7 @@ sformulaa
 shaolinb
 shaolins
 sheriff
+shettle
 shienryu
 shikgam2
 shikigam
@@ -3026,6 +3038,7 @@ upyoural
 usclssic
 valkyrie
 valtric
+vampire
 vandyke
 vandykeb
 vandykejal
