--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -15,6 +15,7 @@
 1942abl
 1942b
 1942h
+1942iti
 1942p
 1942w
 1943
@@ -450,6 +451,7 @@ anibonusxo
 anibonusxo2
 anibonusxo3
 animalc
+animalhjb
 animaljr
 animaljrj
 animaljrs
@@ -822,6 +824,7 @@ badlands
 bagman
 bagmanj
 bagmanm2
+bagmanm3
 bagmanmc
 bagmans
 bagmans3
@@ -1300,6 +1303,7 @@ bombsa
 bonanza
 bonanzar2
 bongo
+bongoa
 bonkadv
 bonuscrd
 bonuscrda
@@ -1941,6 +1945,7 @@ chelnovj
 chelnovjbl
 chelnovjbla
 chelnovu
+chessac
 chesskng
 chessmst
 chessmstdm
@@ -2220,6 +2225,9 @@ comg272a
 comg272b
 comg5107
 comg5108
+comg5108a
+comg5108b
+comg6004
 comg903d
 comg905d
 comil
@@ -2986,6 +2994,7 @@ dfeveron
 dfjail
 dfkbl
 dfruit
+dfruita
 dg680
 dgama87
 dgama88
@@ -3185,6 +3194,7 @@ donpachikr
 dorachan
 doraemon
 doraglob
+doraglobf
 doraglobg
 dorapdc
 doraphon
@@ -3270,8 +3280,9 @@ drgw3103
 drgw3105
 dribling
 driblinga
-driblingbr
+driblingam
 driblingo
+driblingvm
 drifto94
 driftout
 driftoutct
@@ -3494,6 +3505,7 @@ embargo
 emeralda
 emeraldaj
 emeraldaja
+emirage
 emma2
 empcity
 empcityfr
@@ -3527,6 +3539,7 @@ epacman2r
 epc
 epo_guru
 epo_sdb
+epo_tfp2
 eprom
 eprom2
 equites
@@ -3574,6 +3587,7 @@ eswatud
 et3400
 eti660
 eto
+etoa
 eturtles
 euroch92
 euroch92j
@@ -4054,6 +4068,7 @@ flashgalk
 flicker
 flicky
 flickya
+flickyb
 flickyo
 flickys1
 flickys2
@@ -4334,6 +4349,7 @@ galaxia
 galaxiaa
 galaxiab
 galaxiac
+galaxiamv
 galaxian
 galaxiana
 galaxianbl
@@ -4364,6 +4380,7 @@ galgame
 galgame2
 galgame3
 galgame4
+galgame4p
 galgbios
 galhustl
 galileo
@@ -4546,6 +4563,7 @@ gekiretu
 gekiridn
 gekiridnj
 gekisha
+gekishap2
 gekisou
 gemcrush
 gemini
@@ -4818,6 +4836,7 @@ goodluck
 goonies
 goori
 gorf
+gorfirec
 gorfpgm1
 gorfpgm1f
 gorfpgm1g
@@ -5193,6 +5212,7 @@ halleyscjp
 hamaway
 hamboy
 hammer
+hana6pt2
 hanaawas
 hanagumi
 hanakanz
@@ -5634,6 +5654,8 @@ ibara
 ibarablk
 ibarablka
 ibarao
+ibm5100
+ibm5110
 ibm5150
 ibm5155
 ibm5160
@@ -5657,6 +5679,7 @@ iemotom
 iganinju
 iganinjub
 igmo
+igor
 igs_ncs
 igs_ncs2
 igstet341
@@ -5850,6 +5873,7 @@ itunlim
 itvg48
 itvg49
 itvphone
+ivant
 ivelultr
 ixion
 ixl2000
@@ -6075,6 +6099,7 @@ jak_wwe
 jak_xmenp
 jamesb
 jamesb2
+jaminator
 janbari
 jangou
 jangtaku
@@ -6932,7 +6957,9 @@ lightbrj
 lightfgt
 lilcomp
 lilprof
-lilprofa
+lilprofo
+lilprofoa
+lilprofob
 lindbios
 linkypip
 liquidk
@@ -7190,6 +7217,7 @@ macrossp
 macse
 macse30
 macsefd
+mactv
 macxl
 madalien
 madaliena
@@ -7815,6 +7843,8 @@ mjnquestb
 mjprivat
 mjreach
 mjreach1
+mjreachbl
+mjreachp2
 mjschuka
 mjsenpu
 mjsikakb
@@ -8217,11 +8247,13 @@ mspacmanbg
 mspacmanbg2
 mspacmanbgc
 mspacmanbgd
+mspacmanbgf
 mspacmanbhe
 mspacmanbi
 mspacmanblt
 mspacmanblt2
 mspacmancr
+mspacmanhnc
 mspacmanlai
 mspacmat
 mspacmbe
@@ -8230,6 +8262,7 @@ mspacmbn
 mspacmnf
 mspacpls
 mspactwin
+mspactwina
 mspuzzle
 mspuzzlea
 mspuzzleb
@@ -8680,6 +8713,7 @@ nslasherj
 nslashers
 nslasheru
 nsnova
+nsnovaa
 nspirit
 nspiritj
 nss
@@ -9177,6 +9211,7 @@ pcega
 pcg815
 pcherc
 pcipc
+pcipcs7
 pcktgal
 pcktgal2
 pcktgal2j
@@ -10893,6 +10928,7 @@ rcdino4
 rchase
 rchase2
 rchasej
+rchasejb
 rcirulet
 rclimb
 rclimb_10
@@ -10948,6 +10984,7 @@ rdkng_l4
 rdqa
 re800ea
 re800v1
+re800v1a
 re800v3
 re900
 react
@@ -11130,6 +11167,7 @@ rltennisa
 rm380z
 rm380z34d
 rm380z34e
+rm380zhrg
 rmancp2j
 rmgoldyh
 rmhaihai
@@ -11367,6 +11405,7 @@ rungunua
 rungunuad
 rungunud
 runpuppy
+runrun
 rushatck
 rushbets
 rushcrsh
@@ -11590,6 +11629,7 @@ scessjoe
 scfinals
 scfinalso
 scfinalsoc
+schachak
 schaser
 schasera
 schaserb
@@ -11673,6 +11713,7 @@ sdfight
 sdgndmps
 sdi
 sdia
+sdiamond
 sdib
 sdibl
 sdibl2
@@ -11752,6 +11793,7 @@ senpmate
 senspeed
 senstriv
 senterp
+senterpc
 sentetst
 sentx6p
 sentx6pd
@@ -13412,6 +13454,7 @@ tbyahhoo
 tc2048
 tc4
 tc7atc
+tcarnavi
 tcaveman
 tccombat
 tccosmos
@@ -13854,6 +13897,9 @@ tmntua
 tmntub
 tmntuc
 tmntucbl
+tmosh
+tmoshs
+tmoshsp
 tmpacman
 tmpdoki
 tms9995bb
@@ -13923,6 +13969,7 @@ tomahawk1
 tomcat
 tomcatsw
 tomcpin
+tomplc
 tondemo
 tonton
 tontonb
@@ -14171,6 +14218,7 @@ tskelwarr
 tsonic
 tsonic2
 tspidman
+tsptr_l1
 tsptr_l3
 tst_galx
 tst_invd
@@ -14453,6 +14501,7 @@ valtric
 vamphalf
 vamphalfk
 vamphalfr1
+vampire
 vampj
 vampja
 vampjr1
@@ -14669,6 +14718,7 @@ viprp1ua
 virtpool
 vis
 visicom
+visual50
 vitaminc
 vivdolls
 vixen
@@ -15114,6 +15164,7 @@ x68000
 x80wc
 x820
 xday2
+xds19p
 xegs
 xenophob
 xevi3dg
@@ -15129,6 +15180,7 @@ xexexa
 xexexj
 xfiles
 xfilesk
+xiaoao
 xiistag
 xing48
 xl25
@@ -15195,6 +15247,7 @@ xybotsg
 xymg
 xyonix
 y301xl
+y416xl
 y503iir
 y503iir2
 y532xl
@@ -15319,6 +15372,7 @@ zunkyou
 zupapa
 zvezda
 zwackery
+zx80
 zx81
 zzyzzyxx
 zzyzzyxx2
