--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -23,6 +23,7 @@
 1942abl
 1942b
 1942h
+1942iti
 1942p
 1942w
 1943
@@ -70,6 +71,7 @@
 25pacmano
 280zzzap
 2mindril
+2mindrila
 2spicy
 30test
 39in1
@@ -97,6 +99,7 @@
 3wondersu
 3x3puzzl
 3x3puzzla
+4000_260
 4004clk
 40love
 40lovebl
@@ -680,6 +683,7 @@ akkanvdr
 akumajou
 akumajoun
 aladmdb
+alantin
 albatross
 alcapone
 alcat258
@@ -883,9 +887,11 @@ anibonusxo
 anibonusxo2
 anibonusxo3
 animalc
+animalhjb
 animalhs
 animalhsa
 animalhsb
+animalhsc
 animaljr
 animaljrj
 animaljrs
@@ -1510,6 +1516,7 @@ bagman
 bagmanf
 bagmanj
 bagmanm2
+bagmanm3
 bagmanmc
 bagmans
 bagmans3
@@ -1551,6 +1558,7 @@ bankrob
 bankroba
 bankrobb
 bankshot
+baoqingt
 baracuda
 baraduke
 barata
@@ -1624,6 +1632,7 @@ battlnts
 battlntsa
 battlntsj
 battroad
+batvgc
 bay_d300
 bay_d400
 bay_e400
@@ -1929,6 +1938,7 @@ birdtryb
 bishi
 bishjan
 bittboy
+bj92
 bjpoker
 bjtwin
 bjtwina
@@ -1956,9 +1966,6 @@ bkungfu
 black
 black100
 black100s
-blackbd
-blackbda
-blackbdb
 blackblt
 blackblt2
 blackhol
@@ -2157,6 +2164,7 @@ bonebstr
 bonebstrf
 bonebstrg
 bongo
+bongoa
 bonkadv
 bonkadva
 bonusch
@@ -2309,6 +2317,8 @@ bs9009cx
 bs94
 bsb105
 bsebman
+bsebmanbl
+bsebmanbl2
 bshark
 bsharkj
 bsharkjjs
@@ -2602,6 +2612,7 @@ cardinal
 cardline
 carhntds
 carhop
+caribe
 carjmbre
 carket
 carlecfg
@@ -2746,6 +2757,7 @@ ccmk2a
 ccmk5
 ccmk6
 ccorsario
+ccorsarioa
 ccruise
 ccs2810
 cd100b
@@ -2796,6 +2808,7 @@ cftbl_l2
 cftbl_l3
 cftbl_l4
 cfx9850
+cfx9850gb
 cgalaxn
 cgang
 cgangpzl
@@ -2855,6 +2868,7 @@ chaos
 chaosbrk
 chariotc
 chariotcpe
+charles
 charlien
 charlies
 chasehq
@@ -2879,6 +2893,7 @@ chelnovjbl
 chelnovjbla
 chelnovu
 cherry96
+chessac
 chessc2
 chessmst
 chessmsta
@@ -3233,6 +3248,7 @@ comg186
 comg187
 comg204
 comg208
+comg214
 comg227
 comg230
 comg236
@@ -3243,6 +3259,9 @@ comg272a
 comg272b
 comg5107
 comg5108
+comg5108a
+comg5108b
+comg6004
 comg903d
 comg905d
 comil
@@ -3415,6 +3434,7 @@ cptennis
 cptennisj
 cpthook
 cptlucky
+cptshark
 cpzodiac
 cpzodiacj
 cqback
@@ -3462,6 +3482,7 @@ critcrsh
 crkdown
 crkdownj
 crkdownu
+croaky
 crockman
 crockmnf
 croquis
@@ -4172,6 +4193,7 @@ dfjail
 dfkbl
 dfndr_l4
 dfruit
+dfruita
 dgun2500
 dgun2561
 dgun2572
@@ -4484,6 +4506,7 @@ doodlejmp
 dorachan
 doraemon
 doraglob
+doraglobf
 doraglobg
 dorapdc
 doraphon
@@ -4508,6 +4531,7 @@ downtown
 downtown2
 downtownj
 downtownp
+doyousud
 dpatrol
 dpatrola
 dpcaxp150
@@ -4594,8 +4618,9 @@ drhl
 drhla
 dribling
 driblinga
-driblingbr
+driblingam
 driblingo
+driblingvm
 drifto94
 driftout
 driftoutct
@@ -4609,6 +4634,7 @@ drivfrcp
 drivfrcsg
 drivfrcsga
 drivfrct
+drkseal
 drktnjr
 drmario
 drmcatch
@@ -4645,8 +4671,6 @@ dsabera
 dsaberj
 dsb46
 dsgnwrld
-dslayrr
-dslayrra
 dsmbl
 dsoccr94
 dsoccr94j
@@ -5387,6 +5411,7 @@ embryon
 emeralda
 emeraldaj
 emeraldaja
+emirage
 emjjoshi
 emjscanb
 emjtrapz
@@ -6222,7 +6247,9 @@ epo_eppk
 epo_esdx
 epo_guru
 epo_sdb
+epo_tenn
 epo_tfit
+epo_tfp2
 eprom
 eprom2
 equites
@@ -6282,6 +6309,7 @@ eswatjd
 eswatu
 eswatud
 eto
+etoa
 eturtles
 eurit30
 euro2k2
@@ -6325,6 +6353,7 @@ exctsccrb
 exctsccrj
 exctsccrjo
 exctsccru
+exe10102
 exechess
 exedexes
 exeltel
@@ -6856,6 +6885,7 @@ fldragona
 flicker
 flicky
 flickya
+flickyb
 flickyo
 flickys1
 flickys2
@@ -7047,6 +7077,7 @@ fstarfrcj
 fstarfrcja
 fstarfrcw
 fstation
+fstgfish
 ft68m
 ft_l3
 ft_l4
@@ -7176,6 +7207,7 @@ galaxia
 galaxiaa
 galaxiab
 galaxiac
+galaxiamv
 galaxian
 galaxiana
 galaxianbl
@@ -7206,6 +7238,7 @@ galgame
 galgame2
 galgame3
 galgame4
+galgame4p
 galgbios
 galhustl
 galileo
@@ -7538,6 +7571,7 @@ gekiretu
 gekiridn
 gekiridnj
 gekisha
+gekishap2
 gekisou
 gekitsui
 gemcrush
@@ -7696,6 +7730,7 @@ gl_wywh
 gl_wywh24
 gl_wywh24p
 gl_wywhp
+gladiador
 gladiatp
 gladiatr
 glasgow
@@ -7738,7 +7773,6 @@ glxplay2
 gm1000
 gm235upc
 gmahou
-gmfamily
 gmgalax
 gmine_l2
 gmissile
@@ -7933,6 +7967,7 @@ goodluck
 goonies
 goori
 gorf
+gorfirec
 gorfpgm1
 gorfpgm1f
 gorfpgm1g
@@ -8370,6 +8405,8 @@ hamaway
 hamboy
 hamhouse
 hammer
+hammerch
+hana6pt2
 hanaawas
 hanagumi
 hanakanz
@@ -8393,6 +8430,8 @@ hangonvf
 hangplt
 hangpltu
 hangzo
+hapfarm
+haplucky
 happy6
 happy6100cn
 happy6100hk
@@ -8466,7 +8505,6 @@ hatrisj
 hatrisp
 hattrick
 haunthig
-hawaii
 hawk
 hawkman
 hawkman1
@@ -9000,6 +9038,8 @@ ibarablk
 ibarablka
 ibarao
 ibm3153
+ibm5100
+ibm5110
 ibm5550
 icatel
 iccash
@@ -9038,6 +9078,7 @@ if800
 iganinju
 iganinjub
 igmo
+igor
 igromula
 igromult
 igs_ncs
@@ -9223,6 +9264,7 @@ invrvngeb
 invrvngedu
 invrvngegw
 inwinner
+inwinners
 inyourfa
 iomoon
 iowapp
@@ -9294,6 +9336,7 @@ itt9216
 itvg48
 itvg49
 itvphone
+ivant
 ivorytsk
 ixion
 j2008
@@ -11003,6 +11046,7 @@ jwildb52
 jwildb52a
 jwildb52h
 jx3p
+jxzh
 jy_03
 jy_11
 jy_12
@@ -11254,6 +11298,7 @@ kncljoea
 knd
 knfl
 kngtmare
+knightar
 knightb
 knightba
 knights
@@ -11615,6 +11660,7 @@ letsgoju
 letterlf
 letterlg
 levers
+lexiart
 lexifit
 lexiseal
 lexitvsprt
@@ -11680,7 +11726,9 @@ lightnin
 lilcomp
 lilith
 lilprof
-lilprofa
+lilprofo
+lilprofoa
+lilprofob
 lindbios
 lineking
 linkypip
@@ -20021,6 +20069,7 @@ mgcrystl
 mgcrystlj
 mgcrystlo
 mgcs
+mgcs3
 mgdh
 mgdha
 mgfx
@@ -20030,6 +20079,7 @@ mgmen89
 mgolf
 mgt20in1
 mgtfit
+mgzz
 mhavoc
 mhavoc2
 mhavocp
@@ -20222,6 +20272,8 @@ mjnquestb
 mjprivat
 mjreach
 mjreach1
+mjreachbl
+mjreachp2
 mjschuka
 mjsenka
 mjsenpu
@@ -20661,11 +20713,13 @@ mspacmanbg
 mspacmanbg2
 mspacmanbgc
 mspacmanbgd
+mspacmanbgf
 mspacmanbhe
 mspacmanbi
 mspacmanblt
 mspacmanblt2
 mspacmancr
+mspacmanhnc
 mspacmanlai
 mspacmat
 mspacmbe
@@ -20674,6 +20728,7 @@ mspacmbn
 mspacmnf
 mspacpls
 mspactwin
+mspactwina
 mspuzzle
 mspuzzlea
 mspuzzleb
@@ -21018,6 +21073,7 @@ nc96j
 nc96k
 nc96l
 nc96txt
+ncarrera
 ncb3
 ncd16
 ncd17c
@@ -21036,6 +21092,7 @@ ncv2
 ncv2j
 nd80z
 nd8lines
+ndongmul
 nds
 ndxron10
 nebulbee
@@ -21258,6 +21315,7 @@ npcartv1
 npcramen
 npeurver
 npfpit
+npft
 npmillen
 npotogib
 nppopeye
@@ -21291,6 +21349,7 @@ nsmb3
 nsmpoker
 nsmw
 nsnova
+nsnovaa
 nspirit
 nspiritj
 nss
@@ -21410,7 +21469,6 @@ oldsplus
 oldsplus203
 olibochu
 olibug
-oligam
 olihockey
 olihockeya
 olmandingc
@@ -22690,6 +22748,7 @@ pickwino
 pickwino2
 pickwinv1
 pickwinvt
+pickytlk
 piece2m
 piece512k
 piggypas
@@ -22855,6 +22914,7 @@ pkii_dm
 pkladies
 pkladiesbl
 pkladiesbl2
+pkladiesblu
 pkladiesl
 pkladiesla
 pkrdewin
@@ -22957,6 +23017,7 @@ pntnpuzl
 pocketrc
 poembase
 poemgolf
+poemspoo
 poemzet
 poemzet2
 poitto
@@ -23408,6 +23469,7 @@ psr16
 psr160
 psr180
 psr190
+psr2000
 psr260
 psr36
 psr40
@@ -23476,6 +23538,7 @@ pulirula
 pulirulaa
 pulirulaj
 pulltabs
+pullttrig
 pulsar
 pumpactv
 punchita
@@ -23545,6 +23608,7 @@ puzznicu
 pv9234
 pve500
 pvmil
+pvmil8
 pvmilfin
 pvwwcas
 pwerplay
@@ -23593,10 +23657,12 @@ qc
 qcash
 qcrayon
 qcrayon2
+qczl
 qfire
 qgakumon
 qgh
 qgundam
+qhzb
 qix
 qix2
 qixa
@@ -23609,6 +23675,7 @@ qkspeller
 qlgs
 qmegamis
 qmhayaku
+qmquasar
 qmrave
 qmsirius
 qncrash
@@ -23656,7 +23723,6 @@ qtono2j
 qtorimon
 qtsbc
 quaak
-quake
 quantum
 quantum1
 quantump
@@ -23985,7 +24051,6 @@ rapidrvr
 rapidrvrp
 rapidrvrv2c
 raprichs
-rasce
 rascot
 rascot2
 rastan
@@ -24043,6 +24108,7 @@ rcdino4
 rchase
 rchase2
 rchasej
+rchasejb
 rcirulet
 rclimb
 rclimb_10
@@ -24121,6 +24187,7 @@ rdkng_l4
 rdqa
 re800ea
 re800v1
+re800v1a
 re800v3
 re900
 react
@@ -24656,6 +24723,7 @@ rungund
 rungunua
 rungunuad
 rungunud
+runrun
 ruprup
 rush
 rushatck
@@ -28683,6 +28751,7 @@ sc4ziggye
 sc4ziggyf
 sc4ziggyg
 sc55
+sc55mk2
 sc5_3414
 sc5_3434
 sc5_3435
@@ -30380,6 +30449,7 @@ scessjoe
 scfinals
 scfinalso
 scfinalsoc
+schachak
 schamp
 schaser
 schasera
@@ -30492,6 +30562,7 @@ sdfight
 sdgndmps
 sdi
 sdia
+sdiamond
 sdib
 sdibl
 sdibl2
@@ -30503,6 +30574,7 @@ sdk51
 sdk80
 sdk86
 sdmg2
+sdmg2p
 sdtennis
 sdtor
 sdungeon
@@ -30577,6 +30649,7 @@ senpmate
 senspeed
 senstriv
 senterp
+senterpc
 sentetst
 sentx6p
 sentx6pd
@@ -30911,6 +30984,7 @@ shdancer1
 shdancerj
 shendeng
 sheriff
+shettle
 shfin_l1
 shienryu
 shikiga3
@@ -31296,6 +31370,7 @@ sman_230e
 sman_240
 smarinef
 smartfp
+smartfpf
 smartfps
 smartoss
 smash
@@ -31397,6 +31472,7 @@ snspares
 snspares1
 snspares2
 soccer
+soccer10
 soccernw
 soccerss
 soccerssa
@@ -32149,6 +32225,9 @@ speedbsk
 speeddrp
 speeddrv
 speedfrk
+speedmst
+speedmsta
+speedmstb
 speedrcr
 speedrs
 speedspn
@@ -32193,6 +32272,7 @@ spiders3
 spidman
 spidmanj
 spidmanu
+spidtt
 spielbud
 spielmast
 spiero
@@ -32359,10 +32439,12 @@ sryudens
 ss2001
 ss_01
 ss_03
+ss_11
 ss_12
 ss_14
 ss_15
 ssanchan
+ssanguoj
 sscandal
 sscope
 sscope2
@@ -32408,6 +32490,7 @@ sscopeub
 sscopeuc
 sscopeucvd2
 sscopevd2
+sscs
 ssf2
 ssf2a
 ssf2ar1
@@ -32779,6 +32862,7 @@ stunrunp
 stuntair
 stuntcyc
 stvboy
+stvdev
 stwr_101
 stwr_101g
 stwr_102
@@ -33251,6 +33335,7 @@ tec1
 techbowl
 techni4
 technodr
+technox
 techromn
 techromna
 techromnu
@@ -33275,7 +33360,6 @@ tehkanwch
 tek4107a
 tek4109a
 tek4319
-tek4404
 tekipaki
 tekipakit
 tekken
@@ -33883,6 +33967,7 @@ tomy_300h
 tomy_301g
 tomy_400
 tondemo
+tongzi
 tonpuu
 tonton
 tontonb
@@ -34189,6 +34274,7 @@ tsamurai2
 tsamuraih
 tsarevna
 tsarevnaa
+tsbuzz
 tsclass
 tsddragon
 tsf2010
@@ -34204,6 +34290,7 @@ tskelwarr
 tsonic
 tsonic2
 tspidman
+tsptr_l1
 tsptr_l3
 tst_galx
 tst_invd
@@ -34407,7 +34494,6 @@ ufomini
 uforobot
 ufosensi
 ufosensib
-uknc
 ultarctc
 ultarctcup
 ultennis
@@ -34928,6 +35014,7 @@ valtric
 vamphalf
 vamphalfk
 vamphalfr1
+vampire
 vampj
 vampja
 vampjr1
@@ -35168,6 +35255,7 @@ viruscl
 virusrck
 virusrckxl
 visor
+visual50
 vitaminc
 vivdolls
 vjpp2
@@ -35493,6 +35581,7 @@ whalecshu
 whalecshua
 wheelfir
 wheelrun
+wheelsii
 wheregld
 whereglda
 wheregldb
@@ -35862,6 +35951,7 @@ wwfwfestk
 wwfwfestu
 wwfwfestu1
 wwfwfestub
+wwitch
 wwjgtin
 wwmarine
 wwmspot
@@ -35899,6 +35989,7 @@ xavmusic
 xavtenni
 xbase09
 xday2
+xds19p
 xenon
 xenonf
 xenophob
@@ -35920,6 +36011,7 @@ xfilesk
 xfilesp
 xfilespf
 xforce
+xiaoao
 xing48
 xl25
 xm200
@@ -35994,6 +36086,7 @@ xybotsg
 xymg
 xyonix
 y301xl
+y416xl
 y532xl
 yachtmn
 yamagchi
