update auto/man created ini files (mame0266)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -398,7 +398,7 @@ bombjackbl
 bombjackt
 bombsa
 bongo
-bongoa
+bongog
 boobhack
 boomrang
 boomranga
@@ -1040,6 +1040,7 @@ freekickb3
 freeze
 frogf
 frogg
+froggeg
 frogger
 froggeram
 froggereb
@@ -1364,6 +1365,7 @@ hustlerb3
 hustlerb4
 hustlerb5
 hustlerb6
+hustlerb7
 hustlerd
 hwrace
 hyhoo
@@ -1474,6 +1476,7 @@ jspecter
 jspecter2
 jumpbug
 jumpbugb
+jumpbugbrf
 jumpcoas
 jumpcoasa
 jumpcoast
@@ -1628,7 +1631,7 @@ luctoday
 lupin3
 lupin3a
 lwings
-lwings2
+lwingsa
 lwingsb
 lwingsj
 lwingsja
@@ -1968,6 +1971,7 @@ pacmanblb
 pacmanblc
 pacmanblci
 pacmanblv
+pacmanblva
 pacmanf
 pacmanfm
 pacmania
@@ -2509,6 +2513,7 @@ sfkicka
 sflush
 sformula
 sformulaa
+sgalwars
 shaolinb
 shaolins
 sheriff
@@ -2778,6 +2783,7 @@ superabc
 superabco
 superbar
 superbik
+superbikg
 superbon
 superbona
 superbug
@@ -2874,6 +2880,7 @@ theglob2
 theglob3
 theglobme
 theglobp
+theglobpa
 thehand
 thehole
 thehustl
@@ -3193,9 +3200,10 @@ zerohour
 zerohoura
 zerohouri
 zerotime
+zerotimea
+zerotimeb
 zerotimed
 zerotimemc
-zerotimeu
 zigzagb
 zigzagb2
 zingzip
