--- a/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/neogeo.ini
@@ -38,6 +38,14 @@ diggerma
 doubledr
 dragonsh
 eightman
+etyphoon
+etyphoon_a
+etyphoon_b1
+etyphoon_b2
+etyphoon_b3
+etyphoon_b4
+etyphoon_b5
+etyphoon_b6
 fatfursp
 fatfurspa
 fatfury1
@@ -57,6 +65,7 @@ garouh
 garouha
 garoup
 ghostlop
+gladmort
 goalx3
 gowcaizr
 gpilots
@@ -160,6 +169,7 @@ mslug5h
 mslugx
 mutnat
 nam1975
+nblktiger
 ncombat
 ncombath
 ncommand
