--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -1348,6 +1348,7 @@ ataxxe
 ataxxj
 atehate
 atetb3482
+atetb5205
 atetris
 atetrisa
 atetrisb
@@ -2164,7 +2165,7 @@ bonebstr
 bonebstrf
 bonebstrg
 bongo
-bongoa
+bongog
 bonkadv
 bonkadva
 bonusch
@@ -3091,6 +3092,7 @@ cluedo2c
 cluedod
 clxvme186
 cm1800
+cm300
 cm32l
 cmagica
 cmanhat
@@ -3134,6 +3136,7 @@ cmtetrisa
 cmtetrisb
 cmtetrisc
 cmtetrisd
+cmtetriskr
 cmtonig
 cmv4
 cmv4a
@@ -3174,6 +3177,7 @@ cobram3a
 cobrap
 cobrapb
 cobrasd
+cobrasda
 cobraseg
 cobrata
 cocean1a
@@ -4006,7 +4010,7 @@ ddpdojblkbl
 ddpdojp
 ddragon
 ddragon2
-ddragon2b
+ddragon2bl
 ddragon2j
 ddragon2u
 ddragon3
@@ -4015,14 +4019,15 @@ ddragon3j
 ddragon3p
 ddragon6809
 ddragon6809a
-ddragonb
-ddragonb2
-ddragonba
+ddragona
+ddragonbl
+ddragonbl2
+ddragonbla
+ddragonj
+ddragonja
 ddragonu
 ddragonua
 ddragonub
-ddragonw
-ddragonw1
 ddrdismx
 ddream95
 ddribble
@@ -6282,6 +6287,7 @@ esha_pr4
 eshb
 eshockey
 esoccer
+esp250c
 espgal
 espgal2
 espgal2a
@@ -7012,6 +7018,7 @@ friskyta
 friskytb
 frogf
 frogg
+froggeg
 frogger
 froggeram
 froggereb
@@ -7459,6 +7466,7 @@ gamt9
 gamt9a
 gamt9lotc
 ganbare
+ganbaremo
 gangonta
 gangrose
 gangwars
@@ -8980,6 +8988,7 @@ hustlerb3
 hustlerb4
 hustlerb5
 hustlerb6
+hustlerb7
 hustlerd
 hustlerp
 hvnsgate
@@ -9162,6 +9171,7 @@ indrema5v
 indremce
 indremll
 indremmm
+indunkgam
 indy4
 indy500
 indy500d
@@ -10999,9 +11009,11 @@ juju
 jujub
 jujuba
 jumanji
+jumbogod
 jumpbean
 jumpbug
 jumpbugb
+jumpbugbrf
 jumpcoas
 jumpcoasa
 jumpcoast
@@ -11018,6 +11030,7 @@ jumppope
 jumpshot
 jumpshotp
 jungjuic
+jungleani
 jungleby
 jungleh
 junglehbr
@@ -11343,6 +11356,7 @@ konamigx
 konek
 konendev
 kong
+kongball
 konin
 kontest
 konzero
@@ -11706,12 +11720,14 @@ lhaunt_8
 lhb
 lhb2
 lhbv33c
+lhfy
 lhtb
 lhzb2
 lhzb2a
 lhzb3
 lhzb3in1
 lhzb4
+lhzbgqb
 liberate
 liberateb
 liberatr
@@ -11940,6 +11956,7 @@ luckylad
 luckypkr
 luckyplr
 luckyrlt
+luckyseven
 luckywld
 luckywldj
 luctoday
@@ -11973,7 +11990,7 @@ lwar_a81
 lwar_a83
 lwar_e90
 lwings
-lwings2
+lwingsa
 lwingsb
 lwingsj
 lwingsja
@@ -20394,6 +20411,7 @@ mnfb_c27
 mnfb_c29
 mnight
 mnightj
+mnrockman
 mntecrlo
 mntecrlo2
 mntecrloa
@@ -20747,6 +20765,7 @@ mt420
 mt440
 mt5510
 mt735
+mt80s
 mt_aftrb
 mt_arrow
 mt_astrm
@@ -21093,6 +21112,7 @@ ncv2j
 nd80z
 nd8lines
 ndongmul
+ndongmul2
 nds
 ndxron10
 nebulbee
@@ -21499,6 +21519,7 @@ one4all
 oneshot
 onetwo
 onetwoe
+onlinertp
 onna34ro
 onna34roa
 ooparts
@@ -21660,6 +21681,7 @@ pacmanblb
 pacmanblc
 pacmanblci
 pacmanblv
+pacmanblva
 pacmanf
 pacmanfm
 pacmania
@@ -21926,6 +21948,7 @@ pcfavor
 pcgold
 pcipctx
 pckobe99
+pcksurfer
 pcktgal
 pcktgal2
 pcktgal2j
@@ -23474,7 +23497,6 @@ psr260
 psr36
 psr40
 psr500
-psr540
 psr75
 psr76
 psr78
@@ -23611,6 +23633,7 @@ pvmil
 pvmil8
 pvmilfin
 pvwwcas
+pwball
 pwerplay
 pwheelsj
 pwp14
@@ -23679,6 +23702,7 @@ qmquasar
 qmrave
 qmsirius
 qncrash
+qncrasha
 qndream
 qnile
 qnilea
@@ -23798,6 +23822,7 @@ r2dtank
 r2dx_v33
 r2dx_v33_r2
 r_alaska
+r_antar
 r_blackm4
 r_blackmag
 r_cavalier
@@ -23947,6 +23972,7 @@ radarzont
 radcl_g1
 radcl_l1
 radcl_p3
+radendur
 radikalb
 radikalba
 radikaldrt
@@ -24039,6 +24065,7 @@ rampart
 rampart2p
 rampart2pa
 rampartj
+ramstar
 rangrmsn
 rapfire5
 raphero
@@ -24320,6 +24347,7 @@ rezono
 rf2
 rf51w14cg
 rfcp168
+rfjailbrk
 rfjet
 rfjet2kc
 rfjeta
@@ -24579,6 +24607,7 @@ rollr_ex
 rollr_f2
 rollr_f3
 rollr_g3
+rollr_l1
 rollr_l2
 rollr_l3
 rollr_p2
@@ -24941,6 +24970,7 @@ sc105
 sc112
 sc116
 sc133
+sc155
 sc1actv8
 sc1armad
 sc1barcd
@@ -30608,6 +30638,7 @@ secondch
 secretab
 secretag
 secretagj
+secretagm
 sectionz
 sectionza
 sectrzon
@@ -30908,6 +30939,7 @@ sgalaxy
 sgalaxya
 sgalaxyb
 sgaltrop
+sgalwars
 sgdrvsim
 sgemf
 sgemfa
@@ -32929,6 +32961,7 @@ superabco
 superb2k
 superbar
 superbik
+superbikg
 superbon
 superbona
 superbug
@@ -33157,6 +33190,7 @@ t3210
 t3in1sa
 t3new
 t4490
+t650c
 t7000
 t7in1ss
 tabe22
@@ -33195,6 +33229,7 @@ taiko9
 tail2nos
 tail2nosa
 tailg
+tairyodk
 taitest
 taitons1
 taitons2
@@ -33557,6 +33592,7 @@ theglob2
 theglob3
 theglobme
 theglobp
+theglobpa
 thegrid
 thegrida
 thegridb
@@ -34191,6 +34227,7 @@ trojanj
 trojanjo
 trojanlt
 trojanr
+trojanra
 trojhors
 tron
 tron2
@@ -34392,6 +34429,8 @@ tvdenwam
 tvgame
 tvgm8080
 tvindictr
+tvpc_dor
+tvpc_tom
 tvpoker
 tvsprt10
 tvtchsb
@@ -36182,9 +36221,10 @@ zeroteame
 zeroteams
 zeroteamsr
 zerotime
+zerotimea
+zerotimeb
 zerotimed
 zerotimemc
-zerotimeu
 zerotm2k
 zerotrgt
 zerotrgta
