--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -720,6 +720,7 @@ ataxxe
 ataxxj
 atehate
 atetb3482
+atetb5205
 atetris
 atetrisa
 atetrisb
@@ -1303,7 +1304,7 @@ bombsa
 bonanza
 bonanzar2
 bongo
-bongoa
+bongog
 bonkadv
 bonuscrd
 bonuscrda
@@ -2841,21 +2842,22 @@ ddr2mlb
 ddra
 ddragon
 ddragon2
-ddragon2b
+ddragon2bl
 ddragon2j
 ddragon2u
 ddragon3
 ddragon3b
 ddragon3j
 ddragon3p
-ddragonb
-ddragonb2
-ddragonba
+ddragona
+ddragonbl
+ddragonbl2
+ddragonbla
+ddragonj
+ddragonja
 ddragonu
 ddragonua
 ddragonub
-ddragonw
-ddragonw1
 ddrbocd
 ddrdismx
 ddream95
@@ -3884,7 +3886,11 @@ feagv5
 feagv7
 feagv7a
 feagv7b
+feagv7c
 feagv9
+feagv9a
+feagv9b
+feagv9c
 feas
 feasbu
 feasbua
@@ -4178,6 +4184,7 @@ friskyta
 friskytb
 frogf
 frogg
+froggeg
 frogger
 froggeram
 froggereb
@@ -5588,6 +5595,8 @@ hustlerb2
 hustlerb3
 hustlerb4
 hustlerb5
+hustlerb6
+hustlerb7
 hustlerd
 hvnsgate
 hvoltage
@@ -6294,9 +6303,11 @@ juicebox
 juju
 jujub
 jujuba
+jumbogod
 jumpbean
 jumpbug
 jumpbugb
+jumpbugbrf
 jumpcoas
 jumpcoasa
 jumpcoast
@@ -7115,7 +7126,7 @@ lw350
 lw450
 lw840
 lwings
-lwings2
+lwingsa
 lwingsb
 lwingsj
 lwingsja
@@ -7923,8 +7934,12 @@ mlg30_2
 mltiwars
 mm1
 mm1b
+mm1m4
+mm1m4g
 mm1m6
+mm1m6g
 mm1m7
+mm1m7g
 mm2
 mm2a
 mm2b
@@ -7970,6 +7985,7 @@ mmsikaku
 mnchmobl
 mnight
 mnightj
+mnrockman
 mo5
 mo5e
 mo5nr
@@ -8975,6 +8991,7 @@ pacmanblb
 pacmanblc
 pacmanblci
 pacmanblv
+pacmanblva
 pacmanf
 pacmanfm
 pacmania
@@ -10400,6 +10417,7 @@ psion3
 psion3a
 psion3a2
 psion3a2_de
+psion3a2_it
 psion3a2_ru
 psion3a2_us
 psion3c
@@ -10682,6 +10700,7 @@ quizdaisk
 quizdna
 quizf1
 quizhq
+quizhuhu
 quizkof
 quizkofk
 quizmeku
@@ -11167,6 +11186,8 @@ rltennisa
 rm380z
 rm380z34d
 rm380z34e
+rm380zf
+rm380zfhrg
 rm380zhrg
 rmancp2j
 rmgoldyh
@@ -11296,6 +11317,7 @@ rollr_ex
 rollr_f2
 rollr_f3
 rollr_g3
+rollr_l1
 rollr_l2
 rollr_l3
 rollr_p2
@@ -12066,6 +12088,7 @@ sg1000m3
 sgalaxy
 sgalaxya
 sgalaxyb
+sgalwars
 sgemf
 sgemfa
 sgemfd
@@ -12128,6 +12151,7 @@ shdancerj
 sheenhvc
 shendeng
 sheriff
+shettle
 shfin_l1
 shienryu
 shikigam
@@ -13151,6 +13175,7 @@ superabc
 superabco
 superbar
 superbik
+superbikg
 superbon
 superbona
 superbug
@@ -13653,6 +13678,7 @@ theglob2
 theglob3
 theglobme
 theglobp
+theglobpa
 thehand
 thehole
 thehustl
@@ -14136,6 +14162,7 @@ trojanj
 trojanjo
 trojanlt
 trojanr
+trojanra
 tron
 tron2
 tron3
@@ -14936,7 +14963,6 @@ wh1ha
 wh2
 wh2h
 wh2j
-wheelfir
 wheelrun
 whirl_l2
 whirl_l3
@@ -15299,6 +15325,7 @@ z80ne
 z80net
 z80netb
 z80netf
+z90
 zackman
 zapcomp
 zarzon
@@ -15325,9 +15352,10 @@ zeropnt2
 zeropnta
 zeropntj
 zerotime
+zerotimea
+zerotimeb
 zerotimed
 zerotimemc
-zerotimeu
 zerotm2k
 zerowing
 zerowing1
